--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ FeedParser==4.1
 Markdown==2.0.1
 textile==2.1.3
 http://www.aeracode.org/releases/south/south-0.6.1.tar.gz
+httplib2==0.5.0
 
 -e git+git://github.com/django-extensions/django-extensions.git#egg=django_extensions
 
@@ -31,3 +32,5 @@ http://www.aeracode.org/releases/south/south-0.6.1.tar.gz
 -e git+git://github.com/sunlightlabs/django-honeypot.git#egg=honeypot
 -e git+git://github.com/montylounge/django-sugar.git#egg=sugar
 -e git+git://github.com/montylounge/django-quoteme.git#egg=quoteme
+
+pymongo==1.1.2
