--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,4 @@ httplib2==0.5.0
 -e git+git://github.com/montylounge/django-quoteme.git#egg=quoteme
 
 pymongo==1.1.2
+-e git+git://github.com/alex/django-templatetag-sugar#egg=template_sugar
